# gogo-gadget

./: .MISSION.md.archive  .gitignore  .swarm-notification  BUG-SWARM-VERIFICATION.md  CLAUDE.md  Cargo.toml  README.md  SPEC-SELF-EXTEND.md  SPEC.md
.jarvis/synthesized/agents/: rlm-cross-file-question-analyzer.AGENT.md
.jarvis/synthesized/skills/: capability-gap-detector.SKILL.md  capability-synthesis-validator.SKILL.md  cargo-test-failure-diagnose.SKILL.md  claude-cost-tracker.SKILL.md  rlm-codebase-audit.SKILL.md  rlm-performance-profiler.SKILL.md  rust-code-quality-fixer.SKILL.md  (+2 more)
agent_docs/: rlm_architecture.md  rlm_tuning.md
docs/: architecture-ascii.txt  architecture-flowchart.md
docs/agents/: rlm-tuning.md
docs/architecture/: diagram-ascii.txt  flowchart.md
docs/bugs/: swarm-verification.md  workers-verification.md
scripts/: gogo-gadget  jarvis  test_gogo_gadget.sh  test_jarvis.sh
scripts/completions/: gogo-gadget.bash  gogo-gadget.fish  gogo-gadget.zsh  jarvis.bash  jarvis.fish  jarvis.zsh
src/: lib.rs  main.rs  subagent.rs  task_loop.rs
src/brain/: mod.rs
src/extend/: context.rs  gap.rs  loader.rs  mod.rs  overseer.rs  registry.rs  synthesis.rs  verify.rs
src/rlm/: aggregator.rs  cache.rs  chunker.rs  context.rs  daemon.rs  embeddings.rs  executor.rs  mod.rs  navigator.rs  parallel.rs  persistence.rs  types.rs
src/swarm/: coordinator.rs  decomposer.rs  executor.rs  mod.rs
src/verify/: mock_detector.rs  mod.rs
tests/: analyzer_tests.rs  cli_tests.rs  integration.rs  lib_tests.rs  swarm_tests.rs  task_loop_tests.rs  verify_tests.rs
(+8 files in other folders)
