[package]
name = "gogo-gadget"
version = "0.1.0"
edition = "2021"
description = "Autonomous agentic system with verified completion and self-extending capabilities"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
walkdir = "2"
colored = "2"
indicatif = "0.17"
ctrlc = "3"
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3"

[workspace]
